tests/paczka1/fuzzy1/51119106.err
Error in line 3: HmfojG5acu A163 74,0
Error in line 16: S236 S236 60,6
Error in line 19: S236 A163 45,7
Error in line 20: haEkVl3EjN A48 32,5
Error in line 29: HmfojG5acu S236 8,5
